radix-transactions/tests/assets/manifest_lexer_error_invalid_integer_3.diag
error: invalid integer value '-300u8' - invalid digit found in string
  |
3 |     "lock_fee"
4 | ;
5 | CALL_METHOD
6 |     Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
7 |     "some_method"
8 |     -300u8
  |     ^^^^^^ invalid integer value
9 | ;
  |